--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   firebase_storage: ^11.6.9
   cloud_firestore: ^4.15.8
   firebase_messaging: ^14.7.19
+  url_launcher: ^6.0.0
+  salomon_bottom_bar: ^3.3.2
+  carousel_slider: ^4.2.1
+  another_carousel_pro: ^1.0.2
+  image_picker:
 
 
 dev_dependencies:
